--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Stand Alone Gallery</title>
  
- <link rel="icon" href="img/favicons/favicon.ico" type="image/x-icon">
+ <link rel="icon" href="img/favicons/logo.png" type="image/x-icon">
  
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/4.1.1/normalize.css">  
   <link rel="stylesheet" href="css/lg-transitions.min.css">
